2002-07-19  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release 0.0.3.

	* mode-info.el (toplevel): Add autoload for functions defined in
	etags.el.
	(function-document, variable-document): Changed the spec of its
	return value.
	(mode-info-show-document): Follow the above change.
	(mode-info-goto-info-entry-1): Ditto.
	(read-tag, find-tag-noselect, find-tag-internal): New method.
	(mode-info-find-tag): New command.

	* mi-util.el (mode-info-defgeneric): Changed error signal.

	* mi-elisp.el (toplevel): Add autoload for functions of
	find-func.el.
	(mode-info-elisp-function-document-1): New inline function.
	(function-document): Call the above function.
	(mode-info-elisp-variable-document-1): New inline function.
	(variable-document): Call the above function.
	(read-tag, find-tag-noselect): New method.

	* mi-config.el (toplevel): Add autoload for `mode-info-find-tag'.

	* elisp-comp.in (toplevel): Install workaround to suppress
	byte-compile warnings for XEmacs and Mule.  This change is
	suggested by Katsumi Yamaoka <yamaoka@jpl.org>.

	* aclocal.m4 (AC_ADD_LOAD_PATH): Fix typo.

2002-07-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release 0.0.2.

	* mode-info.el (describe-function-internal): New method.
	(mode-info-describe-function): Call it.
	(describe-variable-internal): New method.
	(mode-info-describe-variable): Call it.

	* mi-ruby.el (mode-info-ruby-make-index): Enlarge
	`max-specpdl-size' to avoid error.

	* mi-elisp.el (describe-variable-internal): New method to display
	VARIABLES's value.
	(mode-info-elisp-add-function-button): Small modified.
	(mode-info-elisp-add-variable-button): Ditto.

	* mode-info.el (mode-info-describe-function): Accept the 3rd
	optional argument, keep-window.
	(mode-info-describe-variable): Ditto.
	(mode-info-show-document): Ditto.

	* mi-elisp.el (mode-info-elisp-add-function-button): Call
	`mode-info-describe-function' with keep-window option.
	(mode-info-elisp-add-variable-button): Call